--- a/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
+++ b/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TinyFakeHostTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
