--- a/TinyFakeHostHelper.Tests.Integration/TinyFakeHostHelper.Tests.Integration.csproj
+++ b/TinyFakeHostHelper.Tests.Integration/TinyFakeHostHelper.Tests.Integration.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Given_TinyFakeHost_is_hosting_a_fake_web_service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinyFakeHostTestBase.cs" />
