--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -51,6 +51,9 @@
   <ItemGroup>
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestResponse\FakeRequest.cs" />
+    <Compile Include="RequestResponse\FakeRequestResponse.cs" />
+    <Compile Include="RequestResponse\FakeResponse.cs" />
     <Compile Include="ServiceModules\FakeServiceModule.cs" />
     <Compile Include="TinyFakeHost.cs" />
   </ItemGroup>
