--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -56,6 +56,7 @@
     <Compile Include="RequestResponse\FakeResponse.cs" />
     <Compile Include="ServiceModules\FakeServiceModule.cs" />
     <Compile Include="TinyFakeHost.cs" />
+    <Compile Include="TinyFakeHostBootstrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
