TFH-005 Added UrlParameters with Equals method implemented

--- a/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
+++ b/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
@@ -54,6 +54,7 @@
     <Compile Include="FakeResponseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinyFakeHostTests.cs" />
+    <Compile Include="UrlParametersTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
