TFH-006 Added FakeRequestResponseRepository

--- a/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
+++ b/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\NancyResponseExtensions.cs" />
+    <Compile Include="FakeRequestResponseRepositoryTests.cs" />
     <Compile Include="FakeResponseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinyFakeHostTests.cs" />
