--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\GuidExtensions.cs" />
+    <Compile Include="Persistence\FakeRequestResponseRepository.cs" />
+    <Compile Include="Persistence\IFakeRequestResponseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestResponse\FakeRequest.cs" />
     <Compile Include="RequestResponse\FakeRequestResponse.cs" />
