--- a/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
+++ b/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
@@ -51,9 +51,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\FakeRequestResponseExtensions.cs" />
     <Compile Include="Extensions\NancyResponseExtensions.cs" />
     <Compile Include="FakeRequestResponseRepositoryTests.cs" />
     <Compile Include="FakeResponseTests.cs" />
+    <Compile Include="FluentFakerTests.cs" />
     <Compile Include="Helpers\AppSettingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TinyFakeHostConfigurationTests.cs" />
