--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Configuration\ITinyFakeHostConfiguration.cs" />
     <Compile Include="Configuration\TinyFakeHostConfiguration.cs" />
+    <Compile Include="Exceptions\MaximumNumberOfUrlPathSegmentsException.cs" />
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Fakers\FluentFaker.cs" />
     <Compile Include="Persistence\FakeRequestResponseRepository.cs" />
