--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Exceptions\MaximumNumberOfUrlPathSegmentsException.cs" />
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Fakers\FluentFaker.cs" />
+    <Compile Include="Fakers\RequestResponseFaker.cs" />
     <Compile Include="Persistence\FakeRequestResponseRepository.cs" />
     <Compile Include="Persistence\IFakeRequestResponseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
