--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TinyFakeHost.nuspec" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
