--- a/TinyFakeHostHelper.Tests.Unit/packages.config
+++ b/TinyFakeHostHelper.Tests.Unit/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="1.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
 </packages>
