--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asserters\FluentAsserter.cs" />
+    <Compile Include="Asserters\RequestedQueryAsserter.cs" />
     <Compile Include="Configuration\ITinyFakeHostConfiguration.cs" />
     <Compile Include="Configuration\TinyFakeHostConfiguration.cs" />
     <Compile Include="Exceptions\AssertionException.cs" />
