--- a/TinyFakeHostHelper/TinyFakeHost.nuspec
+++ b/TinyFakeHostHelper/TinyFakeHost.nuspec
@@ -16,5 +16,6 @@
   </metadata>
   <files>
     <file src="bin\TinyFakeHost.dll" target="lib\net40" /> 
+    <file src="bin\readme.txt" target="" /> 
   </files>
 </package>
