TFH-020 Renamed some classes, methods and properties

--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -70,8 +70,8 @@
     <Compile Include="RequestResponse\FakeRequest.cs" />
     <Compile Include="RequestResponse\FakeRequestResponse.cs" />
     <Compile Include="RequestResponse\FakeResponse.cs" />
-    <Compile Include="RequestResponse\UrlParameter.cs" />
-    <Compile Include="RequestResponse\UrlParameters.cs" />
+    <Compile Include="RequestResponse\Parameter.cs" />
+    <Compile Include="RequestResponse\Parameters.cs" />
     <Compile Include="ServiceModules\FakeServiceModule.cs" />
     <Compile Include="TinyFakeHost.cs" />
     <Compile Include="TinyFakeHostBootstrapper.cs" />
