--- a/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
+++ b/TinyFakeHostHelper.Tests.Unit/TinyFakeHostHelper.Tests.Unit.csproj
@@ -66,7 +66,7 @@
     <Compile Include="RequestedQueryRepositoryTests.cs" />
     <Compile Include="TinyFakeHostConfigurationTests.cs" />
     <Compile Include="TinyFakeHostTests.cs" />
-    <Compile Include="UrlParametersTests.cs" />
+    <Compile Include="ParametersTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
