--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Persistence\IRequestedQueryRepository.cs" />
     <Compile Include="Persistence\RequestedQueryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestResponse\UrlParameters.cs" />
+    <Compile Include="RequestResponse\UrlParameter.cs" />
     <Compile Include="RequestResponse\FakeRequest.cs" />
     <Compile Include="RequestResponse\FakeRequestResponse.cs" />
     <Compile Include="RequestResponse\FakeResponse.cs" />
