TFH-023 Added Id in FakeRequestResponse

--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Configuration\TinyFakeHostConfiguration.cs" />
     <Compile Include="Exceptions\AssertionException.cs" />
     <Compile Include="Exceptions\MaximumNumberOfUrlPathSegmentsException.cs" />
+    <Compile Include="Exceptions\UniqueIdException.cs" />
     <Compile Include="Extensions\DynamicDictionaryExtensions.cs" />
     <Compile Include="Extensions\GuidExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
