--- a/TinyFakeHostHelper.Tests.Integration/TinyFakeHostHelper.Tests.Integration.csproj
+++ b/TinyFakeHostHelper.Tests.Integration/TinyFakeHostHelper.Tests.Integration.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Given_TinyFakeHost_is_hosting_a_fake_web_service.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="TinyFakeHostTestBase.cs" />
     <Compile Include="TinyFakeHostTests.cs" />
   </ItemGroup>
