--- a/TinyFakeHostHelper/TinyFakeHost.nuspec
+++ b/TinyFakeHostHelper/TinyFakeHost.nuspec
@@ -7,15 +7,14 @@
     <owners>WJ</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Tiny host that fakes services for test</description>
-    <releaseNotes>Support faking by request body and deleting last created fake.</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <releaseNotes>Support dotNET Core 2.2, removed Nancy dependency and new features.</releaseNotes>
+    <copyright>Copyright 2019</copyright>
     <tags>Tiny Fake Host</tags>
     <dependencies>
-      <dependency id="Nancy.Hosting.Self" version="1.0.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\TinyFakeHost.dll" target="lib\net40" /> 
-    <file src="bin\readme.txt" target="" /> 
+    <file src="bin\netcoreapp2.2\TinyFakeHost.dll" target="lib\netcoreapp2.2" /> 
+    <file src="bin\netcoreapp2.2\readme.txt" target="" /> 
   </files>
 </package>
