TFH-034 Added appveyor.yml file and some changes for build

--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>TinyFakeHost</AssemblyName>
     <Platforms>AnyCPU;x86</Platforms>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -16,7 +18,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy $(SolutionDir)README.md $(OutDir)readme.txt" />
+    <Exec Command="copy ..\README.md $(OutDir)readme.txt" />
   </Target>
 
 </Project>
