--- a/TinyFakeHostHelper/TinyFakeHostHelper.csproj
+++ b/TinyFakeHostHelper/TinyFakeHostHelper.csproj
@@ -4,8 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>TinyFakeHost</AssemblyName>
     <Platforms>AnyCPU;x86</Platforms>
+    <Product>TinyFakeHost</Product>
+    <Version>1.0.0.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <Authors>WJ</Authors>
+    <Company>WJ</Company>
+    <Copyright>Copyright ©  2019</Copyright>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
