--- a/TinyFakeHostHelper/TinyFakeHost.nuspec
+++ b/TinyFakeHostHelper/TinyFakeHost.nuspec
@@ -7,17 +7,17 @@
     <owners>WJ</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Tiny host that fakes services for test</description>
-    <releaseNotes>Support dotNET Core 2.2, removed Nancy dependency and added new features.</releaseNotes>
+    <releaseNotes>Support dotNET Core, removed Nancy dependency and added new features.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>Tiny Fake Host</tags>
     <dependencies>
-      <dependency id="Microsoft.AspNetCore.Hosting" version="2.2.0" />
-      <dependency id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" />
-      <dependency id="Microsoft.AspNetCore.Server.Kestrel" version="2.2.0" />
+      <dependency id="Microsoft.AspNetCore.Hosting" version="2.0.0" />
+      <dependency id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.0.0" />
+      <dependency id="Microsoft.AspNetCore.Server.Kestrel" version="2.0.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\netcoreapp2.2\TinyFakeHost.dll" target="lib\netcoreapp2.2" /> 
-    <file src="bin\netcoreapp2.2\readme.txt" target="" /> 
+    <file src="bin\netcoreapp2.0\TinyFakeHost.dll" target="lib\netcoreapp2.0" /> 
+    <file src="bin\netcoreapp2.0\readme.txt" target="" /> 
   </files>
 </package>
