--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,8 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+
+# =========================
+# JetBrains Rider
+# =========================
+.idea/
